@@ -1,3 +1,8 @@
+2004-10-04  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* tools/helper.mk: Clean autogenerated files.
+	* tools/regtests.c: Remove newlines.
+
 2004-10-02  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* lib/gdiplus/tests/.cvsignore: Ignore _hooks.c and _stubs.S.
